Usunięcie duplikatów oraz dodanie zależnośÄci do projektu potrzebnych do wypalenia instalki